// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseLines does not parse content with metastring 1`] = `
{
  "code": "aaaaa
nnnnn",
  "highlightLines": [
    0,
  ],
}
`;

exports[`parseLines does not parse content with metastring 2`] = `
{
  "code": "// highlight-next-line
aaaaa
bbbbb",
  "highlightLines": [
    0,
  ],
}
`;

exports[`parseLines does not parse content with metastring 3`] = `
{
  "code": "aaaaa
bbbbb",
  "highlightLines": [
    0,
  ],
}
`;

exports[`parseLines does not parse content with no language 1`] = `
{
  "code": "// highlight-next-line
aaaaa
bbbbb",
  "highlightLines": [],
}
`;

exports[`parseLines removes lines correctly 1`] = `
{
  "code": "aaaaa
bbbbb",
  "highlightLines": [
    0,
  ],
}
`;

exports[`parseLines removes lines correctly 2`] = `
{
  "code": "aaaaa
bbbbb",
  "highlightLines": [
    0,
  ],
}
`;

exports[`parseLines removes lines correctly 3`] = `
{
  "code": "aaaaa
bbbbbbb
bbbbb",
  "highlightLines": [
    0,
    2,
    0,
    1,
  ],
}
`;

exports[`parseLines respects language 1`] = `
{
  "code": "# highlight-next-line
aaaaa
bbbbb",
  "highlightLines": [],
}
`;

exports[`parseLines respects language 2`] = `
{
  "code": "/* highlight-next-line */
aaaaa
bbbbb",
  "highlightLines": [],
}
`;

exports[`parseLines respects language 3`] = `
{
  "code": "// highlight-next-line
aaaa
/* highlight-next-line */
bbbbb
ccccc
<!-- highlight-next-line -->
dddd",
  "highlightLines": [
    4,
  ],
}
`;

exports[`parseLines respects language 4`] = `
{
  "code": "aaaa
bbbbb
ccccc
dddd",
  "highlightLines": [
    0,
    1,
    2,
    3,
  ],
}
`;
